--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "@pdftron/pdfjs-express": "^6.2.1",
+    "@pdftron/pdfjs-express-viewer": "^8.7.4",
     "react": "^16.6.0",
     "react-dom": "^16.6.0",
     "react-scripts": "2.1.1"
