--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
     "extends": "react-app"
   },
   "engines": {
-    "node": "12.22.12"
+    "node": "16.x"
   },
   "browserslist": [
     ">0.2%",
